#14 - Spring Data Jpa 속성과 설정
- jpa auditing 기능 사용위해 JpaConfig 추가
- db 접근 개발 편의 위한 부트 프로퍼티 적용
- TODO: 패스워드 프로퍼티에 노출됨 추후 처리예정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ management.endpoints.web.exposure.include: "*"
 
 logging:
   level:
-    com.fastcampus.projectboard: debug
+    com.guide.board: debug
     org.springframework.web.servlet: debug
     org.hibernate.type.descriptor.sql.BasicBinder: trace
 
