--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,windows,macos
+
+###Querydsl
+/src/main/generated
