#20 - thymeleaf 3 decoupled logic 설정
thymeleaf 3 프로퍼티 제어 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,6 @@ spring:
     rest:
       base-path: /api
       detection-strategy: annotated
+  .decoupled-logic: true
+  thymeleaf3:
+    decoupled-logic: true
